--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ django-dotenv = "*"
 gunicorn = "*"
 psycopg2-binary = "*"
 dj-database-url = "*"
+django-storages = "*"
+boto3 = "*"
 
 [dev-packages]
 
